feat(close #3): Update src
